$Id: ChangeLog,v 1.150 2006/01/28 00:09:52 manuelbi Exp $

2006-04-24 Manuel Bilderbeek <manuel@msxnet.org>
	* Fix compilation for GCC 4.1, thanks to Martin Michlmayr

2006-01-27 Manuel Bilderbeek <manuel@msxnet.org>
	* Small (yet hacky?) fix for the problem that no MSX Type is selected
	  at the very first startup... I hope this is my very last commit on
	  this version of Catapult. Let's go for Qt!
	* Set version to 0.6.0-R2, which includes this fix and a rebuild for
	  Windows, because the FontMap stuff of wxWidgets gives registry
	  problems for some Windows users. Note that this release is only
	  interesting for Windows users.

2006-01-21 Maarten ter Huurne <maarten@treewalker.org>
	* Released 0.6.0-R1.

2006-01-15 Maarten ter Huurne <maarten@treewalker.org>
	* Compile resources on MinGW32 as part of the build process.
	  Implemented in cooperation with BiFi.

2006-01-01 Manuel Bilderbeek <manuel@msxnet.org>
	* Do a cleaner exit if the openMSX binary cannot be found at all
	* Don't continue if the 'check openMSX binary before launch' fails.

2005-12-31 Arnold Metselaar  <arnold.metselaar@planet.nl>
	* Add support for standard options --version and --help, closes
	  bug 1394202.

2005-12-30 Manuel Bilderbeek <manuel@msxnet.org>
	* Check exit status of version test, handle failure.
	* Upgrade version check: only 0.6.0 or higher is allowed now.
	* Give the Edit Configuration dialog if the wrong version is found
	* Do not start Catapult if the right version cannot be found at all or
	  if the dialog was cancelled.
	* Removed some code duplication.

2005-12-28 Manuel Bilderbeek <manuel@msxnet.org>
	* Start check configs dialog after editing configuration, unless you
	  uncheck the checkbox.
	* Only use alternative way to show icon in about dialog on wxMSW 2.6.
	* Fixed placement and greying out of "x" between scaler algo and
	  factor.

2005-12-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed scale_factor in videocontrols
